--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "private": true,
   "scripts": {
-    "start": "php artisan serve --port=8001",
+    "start": "php artisan serve --host=0.0.0.0 --port=8001",
     "prod": "gulp --production",
     "dev": "gulp watch",
     "docs": "apidoc -i app/Http/Controllers/ -o docs/"
